--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,10 +5,10 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-923.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1011.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-285.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-4.02MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
-  - {name: 🇺🇸 美国-4.76MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
   - {name: 🇮🇹 意大利-1.15MB/s(Youtube:不良林), server: id-lb.sshkit.org, port: 443, type: vmess, uuid: 6fea1649-425b-4092-bf53-29792152c925, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /sshkit/hajjana/62bc48cd97ee1/, ws-headers: {Host: id-lb.sshkit.org}}
   - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇭🇰 香港-378.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
@@ -21,10 +21,10 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
@@ -36,10 +36,10 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
@@ -52,10 +52,10 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
@@ -74,10 +74,10 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
@@ -89,10 +89,10 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
@@ -105,10 +105,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
@@ -130,10 +130,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-923.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
       - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.76MB/s(Youtube:不良林)
       - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
       - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
