--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林), server: 165.154.243.157, port: 48001, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1011.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇸🇬 新加坡-285.2KB/s(Youtube:不良林), server: 194.124.35.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-4.02MB/s(Youtube:不良林), server: 164.92.107.59, port: 1645, type: ss, cipher: chacha20-ietf-poly1305, password: 3f411e87-3e93-4f23-bc22-263a748bc8c5}
-  - {name: 🇮🇹 意大利-1.15MB/s(Youtube:不良林), server: id-lb.sshkit.org, port: 443, type: vmess, uuid: 6fea1649-425b-4092-bf53-29792152c925, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /sshkit/hajjana/62bc48cd97ee1/, ws-headers: {Host: id-lb.sshkit.org}}
-  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-378.0KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.77MB/s(Youtube:不良林), server: trojan2.udpgw.com, port: 443, type: trojan, password: 973ef350-f6a5-11ec-9274-1239d0255272, sni: trojan2.udpgw.com, skip-cert-verify: true}
   - {name: 塞浦路斯-569.0KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 45.88.148.234, port: 38443, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇬🇧 英国-1011.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇭🇰 香港-1.85MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-356.7KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 塞浦路斯-569.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 塞浦路斯-569.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 塞浦路斯-569.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 塞浦路斯-569.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 塞浦路斯-569.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 塞浦路斯-569.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.78MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-285.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.02MB/s(Youtube:不良林)
-      - 🇮🇹 意大利-1.15MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇭🇰 香港-378.0KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.77MB/s(Youtube:不良林)
       - 塞浦路斯-569.0KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
