--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 塞浦路斯-569.0KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 45.88.148.234, port: 38443, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.18MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-1011.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-1.85MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.31MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林), server: 165.154.243.157, port: 48002, type: trojan, password: 9cbbeb3c-d2b6-482c-97c1-1e037f0102f2, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-356.7KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
+  - {name: 🇺🇸 美国-1.84MB/s(Youtube:不良林), server: usa1.mayiyun.shop, port: 20012, type: ss, cipher: aes-256-gcm, password: 9be8090d-bbdc-4e75-90da-044f04dd9c31}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-445.4KB/s(Youtube:不良林), server: doxjp.nbczl233.ml, port: 57447, type: trojan, password: 9431affb-7e63-4fa8-94fc-9f6ef852d4d4, sni: doxjp.nbczl233.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-380.6KB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: v20.emovpn.xyz, port: 1256, type: vmess, uuid: 30fd975c-5bbb-4502-96f1-b01cec401de1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: v20.emovpn.xyz}}
+  - {name: 🇺🇸 美国-307.9KB/s(Youtube:不良林), server: 20.123.187.212, port: 27931, type: vmess, uuid: 256eae41-0b8f-4faa-bce8-6366011dc19f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 塞浦路斯-411.7KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 塞浦路斯-569.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 塞浦路斯-569.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 塞浦路斯-569.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 塞浦路斯-569.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 塞浦路斯-569.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 塞浦路斯-569.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 塞浦路斯-569.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.18MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1011.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.85MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.31MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-356.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.84MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-445.4KB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-560.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-380.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.9KB/s(Youtube:不良林)
+      - 塞浦路斯-411.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
